Bug 593959 - :active tracking gets out of sync when releasing the mouse over a different document, r=roc, a=blocking